# maya-surface-attract

./: .gitignore  CMakeLists.txt  LICENSE  README.md  surface-attract.mod
modules/: LICENSE
scripts/: AEsurfaceAttractTemplate.mel
src/: CMakeLists.txt  main.cpp  surfaceAttractNode.cpp  surfaceAttractNode.h
